# etrade-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  t.py
docs/api/: README.md  accounts.md  advanced.md  alerts.md  authentication.md  market.md  orders.md
docs/cli/: README.md
src/etrade_client/: __init__.py  builders.py  client.py  config.py  exceptions.py
src/etrade_client/api/: __init__.py  accounts.py  alerts.py  base.py  market.py  orders.py  types.py
src/etrade_client/auth/: __init__.py  oauth.py  tokens.py
src/etrade_client/cli/: __init__.py  __main__.py  app.py  async_runner.py  client_factory.py  config.py  formatters.py
src/etrade_client/cli/commands/: accounts.py  alerts.py  auth.py  dev.py  doubleentry.py  market.py  orders.py  transactions.py
src/etrade_client/doubleentry/: __init__.py  chart.py  mapper.py  models.py
src/etrade_client/models/: __init__.py  accounts.py  alerts.py  auth.py  market.py  orders.py  transactions.py
tests/: __init__.py  test_async_runner.py  test_builders.py  test_connection_pooling.py  test_doubleentry.py  test_error_handling.py  test_pagination.py  test_rate_limit_retry.py  test_request_serialization.py
tests/integration/: __init__.py  auth_helper.py  conftest.py  endpoint_field_analyzer.py  field_analyzer.py  test_accounts.py  test_alerts.py  test_connectivity.py  test_endpoint_field_analysis.py  test_market.py  test_nullability.py  test_orders.py  test_transactions.py
tests/test_models/: __init__.py  test_account_models.py  test_alert_models.py  test_market_models.py  test_order_models.py  test_transaction_models.py
