[project]
name = "etrade-client"
version = "0.1.0"
description = "A typed Python client library for E*Trade API"
readme = "README.md"
authors = [
    { name = "Markus Jonsson", email = "reiktar@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a7",
    "mypy>=1.18.0,<1.19.0",  # Pin to 1.18.x for pydantic.mypy plugin compatibility
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",  # Optional: for loading .env.integration
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["etrade_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# Promote attribute access warnings to errors to catch typos and wrong field names
possibly-missing-attribute = "error"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# By default, exclude integration tests (they require sandbox credentials)
addopts = "-m 'not integration'"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require E*Trade sandbox credentials)",
]
